Add comprehensive audio system with dynamic sound effects and emergency sirens
🎵 Audio Features:
- AudioManager singleton for centralized audio control
- Traffic light click sounds (light_switch_click.mp3)
- Car success sounds when passing intersection (success_car_passed.mp3)
- Crash collision sounds (crash_minor_collision.mp3)
- Achievement sounds for objective completion (success_perfect_flow.mp3)
- Dynamic emergency vehicle sirens:
  * Ambulance siren (car_ambulance_siren.mp3) with priority
  * Police siren (car_police_siren.mp3) when no ambulance present
  * Smart auto-start/stop when vehicles appear/disappear

🔧 Technical Implementation:
- Separate audio players for effects vs continuous sounds
- Volume control (70% default, sirens 60% to prevent overwhelming)
- Sound enable/disable toggle functionality
- Proper error handling with debugPrint fallbacks
- Audio cleanup on game restart and app disposal
- Integration with all game events and user interactions

🎮 Integration Points:
- Arrow keys and touch controls trigger light switch sounds
- Car passing events play success audio with visual score popups
- Collision detection triggers crash sounds with explosion effects
- Objective completion plays achievement fanfare
- Emergency vehicles automatically manage siren playback
- Game state changes (restart, pause) properly handle audio cleanup

Dependencies: Added audioplayers ^6.1.0 package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +24,7 @@ flutter:
   assets:
       - assets/images/grass_texture.jpg
       - assets/images/tuesdae_rush_cover.jpg
+      - assets/audio/
 
 flutter_launcher_icons:
   windows:
