--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   audioplayers: ^6.1.0
+  firebase_core: ^2.24.2
+  firebase_analytics: ^10.7.4
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +28,7 @@ flutter:
       - assets/images/grass_texture.jpg
       - assets/images/tuesdae_rush_cover.jpg
       - assets/audio/
+      - .env
 
 flutter_launcher_icons:
   windows:
