--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ firebase.json
 **/windows/flutter/generated_plugin_registrant.cc
 **/windows/flutter/generated_plugins.cmake
 **/macos/Flutter/GeneratedPluginRegistrant.swift
+**/linux/flutter/generated_plugin_registrant.cc
+**/linux/flutter/generated_plugins.cmake
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
