--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_analytics: ^10.7.4
   url_launcher: ^6.2.4
+  supabase_flutter: ^2.3.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
