Switch to OTP authentication and add login to pause screen
- Replace magic link authentication with OTP email verification
- Add two-step authentication: email input → OTP verification
- Include resend OTP functionality for better UX
- Add login/logout button to pause screen alongside Resume/About
- Include authentication status indicator in pause overlay
- Update .gitignore to exclude setup and schema files
- Improve user experience with in-game authentication access

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Exclude setup and schema files
+*setup.md
+*SETUP.md
+*schema.sql
+*SCHEMA.sql
